######################################################################
## NOTE: THIS FILE SHOULD BE REPLACED BY RUNNING ./script/bootstrap ##
######################################################################

[tool.poetry]
name = "python-template"
version = "1.0.2"
description = ""
authors = ["John <Johnk_hansen@hotmail.com>"]
readme = "README.md"
packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
